--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="form-wrap">
       <form id="demoForm" novalidate data-webapp="https://script.google.com/macros/s/AKfycbz9LFcmtQ-blFWgPJTu5s3fc7Yxl8_cn1lOqfyaV8BNvfMwmWJrGFNXOug-fp5F3TsU6g/exec">
         <h3>Request Your Free Demo</h3>
-        <p class="muted">Fill in your details to get instant access to bTool BOQ Generator for 24 hours.</p>
+        <p class="muted">Enter your details to access the bTool BOQ Generator instantly.</p>
 
         <label>Company Name
           <input name="company" type="text" required>
