--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
         <button type="submit" id="submitBtn">Get Instant Demo Access</button>
 
+        <div id="loadingBox" class="loading-box">
+          <div class="spinner"></div>
+          <span>Submitting, please wait...</span>
+        </div>
         <p id="status" class="status"></p>
       </form>
     </section>
@@ -55,7 +59,6 @@
     <span class="wa-text">Chat on WhatsApp</span>
   </a>
 
-  <!-- SUCCESS OVERLAY (restored exact text you preferred) -->
   <div id="successOverlay" class="success-overlay" aria-hidden="true">
     <div class="success-card" role="status" aria-live="polite">
       <div class="tick">
@@ -64,28 +67,25 @@
           <path class="tick-check" fill="none" d="M14 27 l8 8 l16 -18" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
       </div>
-      <h3>Success! Your 24-hour trial is active.</h3>
-      <p>We've activated your 24-hour trial. Check your Gmail for details (and open your BOQ sheet when the link arrives).</p>
+      <h3>Thank you — demo access requested!</h3>
+      <p>We've received your request. We'll send demo access details to your Gmail shortly.</p>
       <button id="closeSuccess">Close</button>
     </div>
   </div>
 
   <script src="script.js"></script> 
 
-<!-- DUPLICATE ACCOUNT MODAL -->
 <div id="duplicateModal" class="bt-modal" aria-hidden="true" style="display:none;">
   <div class="bt-modal-overlay" id="btModalOverlay"></div>
 
   <div class="bt-modal-card" role="dialog" aria-modal="true" aria-labelledby="btModalTitle">
-
-    <!-- Keep close button optional (your layout previously removed it) -->
-    <!-- <button id="btModalClose" class="bt-modal-close" aria-label="Close">&times;</button> -->
 
     <div class="bt-modal-header">
       <img src="logo.png" alt="bTool" class="bt-modal-logo">
     </div>
 
     <div class="bt-modal-body">
+
       <h2 id="btModalTitle" style="color:red; font-weight:600;">
         Account already exists
       </h2>
