--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Try bTool BOQ Generator — Free for 24 Hours</title>
+<title>Try bTool BOQ Documentation Tool — Free for 3 Days</title>
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="hero"><div class="wrap">
     <img src="logo.png" alt="bTool Logo" class="logo">
-    <h1>Try bTool BOQ Generator</h1>
-    <p class="sub">Free for 24 Hours</p>
-    <p class="lead">Professional Bill of Quantities generation for construction and engineering projects. Get instant access to the complete tool.</p>
+    <h1>Try BOQ Documentation Tool</h1>
+
+    <p class="sub">Free for 3 Days</p>
+    <p class="lead">Professional BOQ documentation, formatting, and standardised wording for construction projects. Get instant access to the complete tool.</p>
   </div></header>
 
   <main class="main">
     <section class="form-wrap">
       <form id="demoForm" novalidate data-webapp="https://script.google.com/macros/s/AKfycbz9LFcmtQ-blFWgPJTu5s3fc7Yxl8_cn1lOqfyaV8BNvfMwmWJrGFNXOug-fp5F3TsU6g/exec">
         <h3>Request Your Free Demo</h3>
-        <p class="muted">Fill in your details to get instant access to bTool BOQ Generator for 24 hours.</p>
+        <p class="muted">Fill in your details to get instant access to BOQ Documentation Tool.</p>
 
         <label>Company Name
           <input name="company" type="text" required>
@@ -47,14 +49,15 @@
     </section>
   </main>
 
-  <footer class="footer"><div class="wrap"><p>Need help? Contact us on WhatsApp or email support.</p><small>© 2025 bTool BOQ Generator.</small></div></footer>
+  <footer class="footer"><div class="wrap"><p>Need help? Contact us on WhatsApp or email support.</p><small>© 2025 bTool BOQ Documentation Tool.</small></div></footer>
 
   <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
   <form id="fallbackForm" action="https://script.google.com/macros/s/AKfycbz9LFcmtQ-blFWgPJTu5s3fc7Yxl8_cn1lOqfyaV8BNvfMwmWJrGFNXOug-fp5F3TsU6g/exec" method="post" target="hidden_iframe" style="display:none;">
     <input name="company"><input name="email"><input name="phone"><input name="location">
   </form>
 
-  <a class="whatsapp-fab" href="https://wa.me/918129048805?text=Hi%20I%20want%20a%20demo%20for%20bTool%20BOQ%20Generator" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
+  <a class="whatsapp-fab" href="https://wa.me/918129048805?text=Hi%20I%20want%20a%20demo%20for%20bTool%20BOQ%20Documentation%20Tool" target="_blank" rel="noopener" aria-label="Chat on WhatsApp">
+
     <img src="whatsapp-icon.png" alt="WhatsApp" class="wa-img">
     <span class="wa-text">Chat on WhatsApp</span>
   </a>
